--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
   <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
   <link rel="stylesheet" href="style.css">
-  <script rel="main.js"></script>
+  <script src="main.js"></script>
   </head>
   <body background="bg.jpg">
       <h1 class="btn btn-info heading">Object Finder
